# downloadTools

./: .gitignore  1.json  README.md  eslint.config.js  package-lock.json  package.json  rspack.config.mjs  tsconfig.app.tsbuildinfo
src/: main.jsx  main.tsx  router.jsx  router.tsx
src-tauri/: .taurignore  Cargo.toml  databases.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/web_service/: mod.rs
src-tauri/src/web_service/_middleware/: error.rs  mod.rs  request_record.rs
src-tauri/src/web_service/api/: bilibili_video.rs  cmd.rs  cmd_api.rs  cookie.rs  download.rs  download_list.rs  download_record.rs  download_task.rs  mod.rs  platform_config.rs  proxy_api.rs  task.rs  ws_message.rs
src-tauri/src/web_service/config/: config.rs  logger.rs  mod.rs  sqlite.rs  static_path.rs
src-tauri/src/web_service/entity/: cookie_entity.rs  download_list_entity.rs  download_record_entity.rs  mod.rs  platform_config_entity.rs
src-tauri/src/web_service/middleware/: error.rs  request_record.rs
src-tauri/src/web_service/router/: router.rs
src-tauri/src/web_service/utils/: download_task.rs  http_client.rs  http_proxy.rs  http_reverse_proxy.rs  mod.rs  response_impl.rs
src/api/: axios_http.js  axios_http.ts  axios_instance.js  axios_instance.ts  tauri_http.ts
src/component/: comm.css  cron_jobs.jsx  download_config.tsx  download_record.jsx  download_record.tsx  download_video.jsx  download_video.tsx  music_search.jsx  music_search.tsx  platform_config.jsx  platform_config.tsx  platform_params.js  platform_params.tsx  platform_table.tsx  support_platform.jsx  support_platform.tsx  video_search.tsx
src/component/cron_jobs/: cron_jobs.jsx
src/component/download_component/: download_adapter.jsx  download_video.jsx
src/component/music_component/: music_adapter.js  music_adapter.jsx  music_component.css  music_component.jsx
src/home/: home.css  home.jsx  home.tsx
src/platform/: comm.js  comm.ts
src/platform/live_platform/douyu/: douyu_details.js  douyu_live.js  douyu_post.js
src/platform/music_platform/flac/: flac_music_search.ts
src/platform/music_platform/flac_music/: flac_music_search.ts
src/platform/music_platform/ku_wo/: ku_wo_adapter.ts  ku_wo_search.ts
src/platform/music_platform/kugou_music/: kugou_music_adapter.ts  kugou_music_details.ts  kugou_music_details_download.js  kugou_music_details_download.ts  kugou_music_details_info.js  kugou_music_details_info.ts  kugou_music_recommend.js  kugou_music_search.js  kugou_music_search.ts  kugou_sign.ts
src/platform/music_platform/kuwo_music/: kuwo_music_Secret.js  kuwo_music_adapter.ts  kuwo_music_details.ts  kuwo_music_details_download.js  kuwo_music_details_download.ts  kuwo_music_details_info.js  kuwo_music_details_info.ts  kuwo_music_recommend.js  kuwo_music_search.js  kuwo_music_search.ts
src/platform/music_platform/lossless_music/: lossless.js
(+113 files in other folders)
