[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }

fern = "0.7.0"
chrono = "0.4"
reqwest = { version = "0.12.7",features = ["json", "default-tls", "gzip", "stream"] }
futures-util = "0.3.30"
lazy_static = "1.4.0"
sea-orm = { version = "1.0.0",features = ["sqlx-sqlite", "runtime-tokio", "runtime-async-std"]  }
rand = "0.8.5"
base64 = "0.22.1"
windows = {version = "0.58.0", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_Security_Cryptography",] }
aes-gcm = "0.10.3"
directories = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = {version = "1.40.0", features = ["full"] }
axum = {version = "0.7.7", features = ["default", "multipart", "tokio"] }
tower-http = {version = "0.6.1", features = ["full"] }


